# chess_pace_tracker

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  package.json
backend/: Cargo.toml  request_timing_data.db
backend/internal/: populate_db.py
backend/src/: api.rs  data_processor.rs  database.rs  deserialization.rs  errors_manager.rs  fetch_lichess.rs  game_info_generator.rs  games_info_generator.rs  games_info_processor.rs  insight_generator.rs  lichess_client.rs  main.rs  message_generator.rs  request_timing_data.db  service_intermediary.rs  trend_chart_generator.rs  unit_test_util.rs  util.rs  websocket.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: DataSeriesChart.tsx  ErrorsPanel.tsx  FlagPanel.tsx  GameModeInput.tsx  GamesCountInput.tsx  ResponsePanel.tsx  SendDataButton.tsx  ToastAlert.tsx  ToastAlertContainer.tsx  UserColorInput.tsx  UsernameInput.tsx  WinRateDonutChart.tsx
frontend/src/components/charts/: DataSeriesChart.tsx  WinRateDonutChart.tsx
frontend/src/components/common/: GenerateInsightsButton.tsx  SendDataButton.tsx
frontend/src/components/inputs/: GameModeInput.tsx  GamesCountInput.tsx  GenericInput.tsx  (+2 more)
frontend/src/context/: ChessDataContext.tsx
frontend/src/hooks/: useFetchChessData.tsx  useWebSocketHook.tsx
frontend/src/services/: apiService.tsx
static/css/: main.0106104c.css  main.0106104c.css.map
static/js/: main.1594b202.js  main.1594b202.js.LICENSE.txt  main.1594b202.js.map
(+6 files in other folders)
