[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_repr = "0.1.18"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
futures-util = "0.3.29"
futures = "0.3.30"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
bytes = "1.5.0"
lichess-api = "0.1.0"
serde_json = "1.0.108"
config = "0.13.4"
string-builder = "0.2.0"
log = "0.4.20"
rusqlite = "0.31.0"